Remove param 'full' from Get Route
To obtain the route endpoints, use /routes/<uuid>/finish|start instead
